syntax = "proto3";

package taxonomy.service;
import "taxonomy.proto";
import "core.proto";
import "artifact.proto";

option csharp_namespace = "TTF.Tokens.tokens";
option java_package = "org.tokentaxonomyinitiative.tokens";
option java_multiple_files = true;

service TaxonomyService {
    //gets
    rpc GetFullTaxonomy (TaxonomyVersion) returns (taxonomy.model.Taxonomy) {}
    rpc GetBaseArtifact (Symbol) returns (taxonomy.model.core.Base) {}
    rpc GetBehaviorArtifact (Symbol) returns (taxonomy.model.core.Behavior) {}
    rpc GetBehaviorGroupArtifact (Symbol) returns (taxonomy.model.core.BehaviorGroup) {}
    rpc GetBehaviorPropertySet (Symbol) returns (taxonomy.model.core.PropertySet) {}
    rpc GetTokenTemplateArtifact (TaxonomyFormula) returns (taxonomy.model.core.TokenTemplate) {}
    
    //sets
    rpc AddArtifact (taxonomy.model.artifact.NewArtifactRequest) returns (taxonomy.model.artifact.NewArtifactRequest) {}
    rpc UpdateArtifact (taxonomy.model.artifact.UpdateArtifactRequest) returns (taxonomy.model.artifact.UpdateArtifactRequest) {}
}

message TaxonomyVersion{
    string version = 1;
}

message Symbol{
    string symbol = 1;
}

message TaxonomyFormula{
    string formula = 1;
}

